examples/bad/ERROR_NOT_A_LIST/is_empty.st
language core;

extend with #lists;

fn main(arg : Nat) -> Bool {
  return List::isempty(arg)
}

//ERROR_NOT_A_LIST
